phase 5: added pwa support

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="theme-color" content="#4F46E5" />
+    <meta name="description" content="A mobile-first web application for managing progress counters with visual feedback" />
+    <link rel="manifest" href="/manifest.json" />
+    <title>Visualized Counter</title>
   </head>
   <body>
     <div id="root"></div>
